Commit at shutdown

--- a/demofile2.html
+++ b/demofile2.html
@@ -1,2 +1,4 @@
 <!--Tags below will be between body tags on rendered page-->
+
+<iframe>src="javascript: '<html><body>Hello, <b>world</b>.</body></html>'"></iframe>
 <h2>My paragraph from demofile2.</h2>
