--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 </head>
 <body>
 <div id="wrap">
-    <iframe src="https://www.google.co.uk"/>
+    <iframe src="demofile2.html"/>
 </div>
+<iframe id="FileFrame" src="about:blank"></iframe>
+<script type="text/javascript">
+var doc = document.getElementById('FileFrame').contentWindow.document;
+doc.open();
+doc.write('<html><head><title></title></head><body>Hello world.</body></html>');
+doc.close();
+</script>
+
 </body>
