Commit at shutdown

--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <head>
- <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="wrap">
-    <iframe src="demofile2.html"/>
-</div>
-<div id="wrap1">
-<iframe id="FileFrame" src="about:blank"></iframe>
-<script type="text/javascript">
-var doc = document.getElementById('FileFrame').contentWindow.document;
-doc.open();
-doc.write('<html><head><title></title></head><body>Hello world.</body></html>');
-doc.close();
-</script>
-</div>
 
+<table style="width:100%">
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th>
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+</table>
 </body>
