--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
 </head>
 <body>
-
-<table style="width:100%">
+    <table style="width:20%">
+    </table>
+<table style="width:80%">
   <tr>
     <th>Firstname</th>
     <th>Lastname</th>
