--- a/index.html
+++ b/index.html
@@ -1,29 +1,16 @@
 <!DOCTYPE html>
-<head>
-</head>
+<html>
 <body>
-    <table style="width:20%">
-        <tr>
-            <td>
-                hi
-            </td>
-        </tr>
-    </table>
-<table style="width:80%">
-  <tr>
-    <th>Firstname</th>
-    <th>Lastname</th>
-    <th>Age</th>
-  </tr>
-  <tr>
-    <td>Jill</td>
-    <td>Smith</td>
-    <td>50</td>
-  </tr>
-  <tr>
-    <td>Eve</td>
-    <td>Jackson</td>
-    <td>94</td>
-  </tr>
-</table>
+
+<form>
+ <fieldset>
+  <legend>Personalia:</legend>
+  Name: <input type="text"><br>
+  Email: <input type="text"><br>
+  Date of birth: <input type="text">
+  Help: <input type="button">
+ </fieldset>
+</form>
+
 </body>
+</html>
