--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 <body>
 
-<form style="width: 400px">
+<form style="width: 400px" "height: 700px">
  <fieldset>
-  <legend>Personalia:</legend>
+  <legend>Map</legend>
+ </fieldset>
+ <fieldset>
+  <legend>Info</legend>
+ </fieldset>
+ <fieldset>
+  <legend>Actions:</legend>
   Name: <input type="text"><br>
   Email: <input type="text"><br>
   Date of birth: <input type="text">
