Commit at shutdown

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h2>WhatsNearMe</h2><h2>WhatsNearMe</h2>
+<h2>WhatsNearMe</h2>
 <form style="width: 400px" "height: 700px">
  <fieldset>
   <legend>Map</legend>
