Commit at shutdown

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<h1>This is ...</h1>
 <h2>WhatsNearMe</h2>
 <form style="width: 400px" "height: 700px">
  <fieldset>
