Commit at shutdown

--- a/index_body.html
+++ b/index_body.html
@@ -1,4 +1,12 @@
-  Date of birth: <input type="text">
-  Help: <input type="button">
+<h1>H1 header</h1>
+<h2>H2 header</h2>
+<form>
+ <fieldset>
+  <legend>Actions</legend>
+  Name: <input type="text">
+  Button1: <input type="button">
+  Button2: <input type="button">
+  Button3: <input type="button">
+  Button4: <input type="button">
  </fieldset>
 </form>
