Commit at shutdown

--- a/index_body.html
+++ b/index_body.html
@@ -1,6 +1,6 @@
 <h1>H1 header</h1>
 <h2>H2 header</h2>
-<form>
+<form width="400px">
  <fieldset>
   <legend>Actions</legend>
   Name: <input type="text">
