Commit at shutdown

--- a/index_body.html
+++ b/index_body.html
@@ -1,7 +1,7 @@
 <h1>H1 header</h1>
 <h2>H2 header</h2>
-<form width="400px">
- <fieldset>
+<form width="300">
+ <fieldset width="300">
   <legend>Actions</legend>
   Name: <input type="text">
   Button1: <input type="button">
