--- a/w3s_css.html
+++ b/w3s_css.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="./mystyle.css">
+<!--<link rel="stylesheet" type="text/css" href="./mystyle.css">
+-->
 </head>
 <body>
+<style>
+h1 {color:red;}
+p {color:blue;}
+</style>
 
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
