Commit at shutdown

--- a/b1_open_map_frameset.html
+++ b/b1_open_map_frameset.html
@@ -1,4 +1,3 @@
  <fieldset width="300">
   <legend>Map</legend>
-  Map goes here-ish
-<p><iframe src="index.html" width="300" height="300">Map goes here</iframe></p>
+<p><iframe src="map.html" width="100%" height="300">Map goes here-ish</iframe></p>
