--- a/b1_open_map_frameset.html
+++ b/b1_open_map_frameset.html
@@ -1,3 +1,3 @@
- <fieldset width="300">
+<fieldset style="width: 250px; height: 300px">
   <legend>Map</legend>
-<p><iframe src="map.html" width="100%" height="300">Map goes here-ish</iframe></p>
+  Map goes here
