--- a/b1_open_map_frameset.html
+++ b/b1_open_map_frameset.html
@@ -1,3 +1,3 @@
-<fieldset style="width: 250px; height: 300px">
+<fieldset style="width: 100%; height: 30%">
   <legend>Map</legend>
   Map goes here
