--- a/b1_open_map_frameset.html
+++ b/b1_open_map_frameset.html
@@ -1,3 +1,3 @@
-<fieldset style="width: 100%; height: 30%">
+<fieldset style="width: 100%; height: 40%">
   <legend>Map</legend>
-  Map goes here
+  <p>Map goes here</p>
