--- a/c1_open_item_playing_frameset.html
+++ b/c1_open_item_playing_frameset.html
@@ -1,3 +1,3 @@
- <fieldset width="300">
+ <fieldset>
   <legend>Item playing</legend>
-  Text of item playing goes here.
+  <p>Text of item playing goes here.</p>
