Commit at shutdown

--- a/d1_open_actions_frameset.html
+++ b/d1_open_actions_frameset.html
@@ -1,4 +1,4 @@
- <fieldset width="300">
+ <fieldset style="height: 30%">
   <legend>Actions</legend>
   Button1: <input type="button">
   Button2: <input type="button">
