--- a/d1_open_actions_frameset.html
+++ b/d1_open_actions_frameset.html
@@ -1,6 +1,6 @@
  <fieldset style="height: 30%">
   <legend>Actions</legend>
-  Button1: <input type="button">
+  <p> Button1: <input type="button">
   Button2: <input type="button">
   Button3: <input type="button">
-  Button4: <input type="button">
+  Button4: <input type="button"></p>
