Commit at shutdown

--- a/d1_open_actions_frameset.html
+++ b/d1_open_actions_frameset.html
@@ -4,3 +4,4 @@
   Button2: <input type="button">
   Button3: <input type="button">
   Button4: <input type="button"></p>
+<button class="button button4">Start</button>
