Commit at shutdown

--- a/d1_open_actions_frameset.html
+++ b/d1_open_actions_frameset.html
@@ -1,7 +1,3 @@
  <fieldset style="height: 30%">
   <legend>Actions</legend>
-  <p> Button1: <input type="button">
-  Button2: <input type="button">
-  Button3: <input type="button">
-  Button4: <input type="button"></p>
-<button class="button button4">Start</button>
+  <p> <button class="button button4">Start</button></p>
