--- a/a0_top_of_html.html
+++ b/a0_top_of_html.html
@@ -23,4 +23,5 @@
 </style>
 </head>
 <body>
-
+    <p>"Last refresh: "+dt.myDateTime()+"</br>"+"<a href='https://github.com/timho13/WhatsNearMe'>Github</a>"+"</br>";
+    </p>
