Commit at shutdown

--- a/a0_top_of_html.html
+++ b/a0_top_of_html.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <style>
+p {
+    font-size: 14px;
+}
+
 .button {
     background-color: #4CAF50; /* Green */
     border: none;
