Commit at shutdown

--- a/a0_top_of_html.html
+++ b/a0_top_of_html.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 414px) {
+  body {
+    background-color: #F09A9D; /* Red */
+  }
+}
+
+/* Tablet & Desktop Styles */
+@media only screen and (min-width: 415px) {
+  body {
+    background-color: #B2D6FF; /* Blue */
+  }
+}
 body {
     color: blue;
 }
