--- a/a0_top_of_html.html
+++ b/a0_top_of_html.html
@@ -20,6 +20,7 @@
 @media only screen and (min-width: 415px) {
   body {
     background-color: #B2D6FF; /* Blue */
+        width="414px";
   }
 }
 body {
