Commit at shutdown

--- a/a0_top_of_html.html
+++ b/a0_top_of_html.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+<meta charset='UTF-8'/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
 * {
@@ -20,7 +21,7 @@
 @media only screen and (min-width: 415px) {
   body {
     background-color: #B2D6FF; /* Blue */
-        width="414px";
+        width: 414px;
   }
 }
 body {
