Commit at shutdown

--- a/a2_close_form.html
+++ b/a2_close_form.html
@@ -1,2 +1,2 @@
-<p>FormBottom</p>
+<p>"Last refresh: "+dt.myDateTime()+"</br>"+"<a href='https://github.com/timho13/WhatsNearMe'>Github</a>"+"</br></p>
 </form>
