--- a/a2_close_form.html
+++ b/a2_close_form.html
@@ -1,7 +1,8 @@
 <p>Last refresh: <script>
-document.write(new Date().toLocaleDateString());
+document.write(new Date().toLocaleDateString()+" ");
 document.write(new Date().toLocaleTimeString());
 </script>
 </br>
-<a href='https://github.com/timho13/WhatsNearMe'>Github</a></br></p>
+<a href='https://github.com/timho13/WhatsNearMe'>Github</a>
+</br></p>
 </form>
