--- a/a0_top_of_html.html
+++ b/a0_top_of_html.html
@@ -27,6 +27,11 @@
 body {
     color: blue;
 }
+form {
+border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding: 20px;
+}
 div {
     display: block;
 }
