--- a/a0_top_of_html.html
+++ b/a0_top_of_html.html
@@ -31,6 +31,7 @@ form {
 border-radius: 25px;
     border: 2px solid #73AD21;
     padding: 20px;
+        background-color: #000000;
 }
 div {
     display: block;
