Commit at shutdown

--- a/a0_top_of_html.html
+++ b/a0_top_of_html.html
@@ -13,7 +13,7 @@
 /* Mobile Styles */
 @media only screen and (max-width: 414px) {
   body {
-    background-color: #F09A9D; /* Red */
+    background-color: #000000;
   }
 }
 
@@ -29,9 +29,9 @@ body {
 }
 form {
 border-radius: 25px;
-    border: 2px solid #73AD21;
-    padding: 20px;
-        background-color: #000000;
+  border: 2px solid #73AD21;
+  padding: 20px;
+  background-color: #FFFFFF;
 }
 div {
     display: block;
